2009-05-15  Alejandro Pinheiro  <apinheiro@igalia.com>

	* hildon/hildon-time-selector.c
	(update_format_policy): prevent to use hours and minutes unitialized

2009-05-15  Alberto Garcia  <agarcia@igalia.com>

	* hildon/hildon-window.c (hildon_window_size_request):
	Always request the full size of the screen (minus the title bar if
	not in fullscreen mode).

	Fixes: NB#107486 (HildonWindow should size itself properly)

2009-05-14  Claudio Saavedra  <csaavedra@igalia.com>

	* hildon/hildon-note-private.h: Add idle_handler to the private data.
	* hildon/hildon-note.c (hildon_note_init), (hildon_note_finalize),
	(on_show_cb), (sound_handling): Disconnect the idle handler for
	the sound when the note is finalized to avoid possible crashes.

	Fixes: NB#116786 (Image viewer crases whie trying to launch menu,
	in a scenario)

2009-05-13  Artem Egorkine  <ext-artem.egorkine@nokia.com>

	* src/hildon-animation-actor.c,
	* src/hildon-remote-texture.c:
	Added proper object cleanup to remove signal handler and object
	references as HildonAnimationActor and HildonRemoteTexture
	objects get destroyed.

	Fixes: NB#116682 (Destroying parented animation actors when
	parent in unmapped leads to crash)

2009-05-13  Claudio Saavedra  <csaavedra@igalia.com>

	Based on a patch by Christian Dywan (christian@imendio.com)

	* doc/hildon-sections.txt:
	* hildon/hildon-helper.c (+hildon_format_file_size_for_display):
	* hildon/hildon-helper.h: New file size formatting method.
	* debian/changelog:
	* debian/control: Depend on osso-filemanager l10n package for
	proper localization strings.

2009-05-13  Claudio Saavedra  <csaavedra@igalia.com>

	* tests/Makefile.am: Include top_srcdir to make possible to build
	tests in a different builddir.
	* tests/*.c: Include <hildon/hildon-*.h> to allow building tests
	on a different builddir.

2009-05-12  Claudio Saavedra  <csaavedra@igalia.com>

	* hildon/hildon-touch-selector.c (disconnect_model_handlers),